<resources>
    <string name="app_name">ANIMARKER</string>
    <string name="menu_addAnimarker">Add</string>
    <string name="save_animarker"> SAVE ANIMARKER </string>
    <string name="menu_cancelAnimarker">Cancel</string>
    <string name="hint_Destination">Destination</string>
    <string name="button_addAnimarker">Add Animarker</string>
    <string name="hint_animarkerTitle">Species Spotted</string>
    <string name="hint_animarkerDescription">Description </string>
    <string name="button_addImage"> Add Animal Image </string>
    <string name="button_delete_animarker">DELETE ANIMARKER</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="messageLoading">Loading....please wait</string>


    <string name="select_animarker_image">Select Animarker image</string>
    <string name="change_animarker_image">CHANGE ANIMARKER IMAGE</string>
    <string name="enter_animarker_title"> Please enter a Animarker Title </string>
    <string name="button_location">SET LOCATION</string>
    <string name="rate_name">RatingkBarInKotlin</string>
    <string name="select_date">Select Date</string>
    <string name="todo">TODO</string>
    <string name="update_date">ADD Date</string>
    <string name="hint_animarkerDate">Date Spotted</string>
    <string name="datePicker">Datepicker</string>
    <string name="login">LOGIN</string>
    <string name="firstName"> FIRST NAME</string>
    <string name="lastName"> LAST NAME</string>
    <string name="user_email">EMAIL</string>
    <string name="user_password">PASSWORD</string>
    <string name="nav_header">Navigation header</string>
    <string name="nav_header_title">Animarker</string>
    <string name="nav_header_subtitle">animarker.@android.com</string>
    <string name="login_button">LOGIN</string>
    <string name="menu_list">Animarkers</string>
    <string name="menu_add">Add an Animarker</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="addAnimarkerHeader">Add a AnimarkerHeading</string>
    <string name="signup">SIGN UP</string>
    <string name="search_box">Type search terms here</string>
    <string name="toggle_Off">Animarker Inactive</string>
    <string name="toggle_On">Animarker Active</string>
    <string name="title_activity_maps">Map</string>
    <string name="submit_rating">SUBMIT RATING</string>
    <string name="Species_Spotted">Species Spotted</string>
    <string name="menu_search">Search Menu</string>
    <string name="edit_image"> Edit Image </string>
    <string name="all_fields_required"> All fields are required </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">FIRST NAME</string>
    <string name="animarkerError">Error : Couldn\'t Add an Animarker</string>
    <string name="title_activity_animarker_maps">AnimarkerMapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_placemark_list">PlacemarkList_Activity</string>
</resources>