<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/addFragment"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item android:title="Access Control">
            <menu>
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:title="@string/sign_out" />
            </menu>
        </item>

    </group>
</menu>